...
"Discount" = "Discount";

"EPS Bank" = "EPS Bank";

"Edit address" = "Edit address";

"Enter address manually" = "Enter address manually";

"Exchange rate and fees of your bank may apply." = "Exchange rate and fees of your bank may apply.";

"FPX Bank" = "FPX Bank";

"Fast, secure checkout" = "Fast, secure checkout";
...
